--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="wrapper">
         <header class="titles">
-            <h1 class="title generic-font"><a class="mee6-link" href="https://mee6.xyz">mee6.xyz</a> Level Calculator</h1>
+            <h1 class="title generic-font">Xela Level Calculator</h1>
+            <h6>(Based off of mee6 calculator</h6>
             <h2 class="sub-title generic-font">Calculate messages needed to send <i>(for every minute)</i> in order to reach a level</h2>
         </header>
 
