--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mee6 Calculator</title>
+    <title>xelA Calculator</title>
     <script type="text/javascript" src="calc.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <header class="titles">
-            <h1 class="title generic-font">Xela Level Calculator</h1>
+            <h1 class="title generic-font">xelA Level Calculator</h1>
             <h6>(Based off of mee6 calculator</h6>
             <h2 class="sub-title generic-font">Calculate messages needed to send <i>(for every minute)</i> in order to reach a level</h2>
         </header>
