--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
 
         <div class="disclaimer">
-            This site is not affiliated with <a href="https://mee6.xyz/">mee6.xyz</a><br>
-            View the source-code on <a href="https://github.com/vladdeSV/mee6calc.xyz/">GitHub</a><br>
-            Copyright &copy 2016 Vladde Nordholm (<a href="http://vladde.net">vladde.net</a>)
+            This site is not affiliated with <a href="https://mee6.xyz/">xela.dev</a><br>
+            View the source-code on <a href="https://github.com/binn/xela-calc/">GitHub</a><br>
+            Thanks to Vladde Nordholm for making the original (<a href="http://vladde.net">vladde.net</a>)
         </div>
     </div>
 
